k8s/applications/radarr-uhd/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr-uhd
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:5.21.1
          ports:
            - name: ingress
              containerPort: 7878
          volumeMounts:
            - name: radarr-uhd
              mountPath: /config
            - name: libraries
              mountPath: /movies-uhd
              subPath: movies/uhd
            - name: applications
              mountPath: /trash
              subPath: trash
            - name: applications
              mountPath: /data
              subPath: qbittorrent
      volumes:
        - name: radarr-uhd
          persistentVolumeClaim:
            claimName: radarr-uhd
        - name: applications
          persistentVolumeClaim:
            claimName: applications
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
