k8s/applications/radarr-uhd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-uhd
spec:
  type: ClusterIP
  ports:
    - name: radarr
      port: 7878
      targetPort: radarr
